--- a/kousik.ipynb
+++ b/kousik.ipynb
@@ -3,255 +3,341 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "592b329f-2810-46d9-a620-f84d8334e32a",
+   "id": "f8ff157c-d4c4-4ef4-abf5-c37a57682e86",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "110\n"
+      "BM\n",
+      "160\n",
+      "200\n",
+      "Car is not moving\n"
      ]
     }
    ],
    "source": [
-    "# functions with keyword args *\n",
-    "def result(*args):\n",
-    "  return sum(args)\n",
-    "print(result(1,2,3))\n",
-    "print(result(11,22,33,44))\n"
+    "# encapsulation\n",
+    "''' basic encapsulation with attributes ,private attributes \n",
+    "1. __var,__x,__a\n",
+    "self.__a'''\n",
+    "class car:\n",
+    "    def __init__(self,brand,speed):\n",
+    "        self.brand=brand\n",
+    "        self.__speed=speed\n",
+    "    def  get_speed(self):\n",
+    "        return self.__speed\n",
+    "    def set_speed(self,speed):\n",
+    "        if speed>=0:\n",
+    "            self.__speed=speed\n",
+    "        else:\n",
+    "            print(\"Car is not moving\")\n",
+    "c = car(\"BM\",160)\n",
+    "print(c.brand)\n",
+    "print(c.get_speed())\n",
+    "c.set_speed(200)\n",
+    "print(c.get_speed())\n",
+    "c.set_speed(-10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "91cf03ce-9aec-4a73-a12c-4615a29b0275",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kousik\n",
+      " Name: kousik, Age: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# protected attributes\n",
+    "class student:\n",
+    "    def __init__(self,name,age):\n",
+    "        self._name=name\n",
+    "        self._age=age\n",
+    "    def display_info(self):\n",
+    "        print(f\" Name: {self._name}, Age: {self._age}\")\n",
+    "s=student(\"kousik\",20)\n",
+    "print(s._name)\n",
+    "s.display_info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8dc2cb0-06bb-4c71-bfbe-9803a040c836",
+   "id": "d3eb0b87-43b8-47fd-b006-775e9af4c5e7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name : vijay\n",
-      "age : 12\n",
-      "city : Mumbai\n"
+      "280000.0\n"
      ]
     }
    ],
    "source": [
-    "# functions with keyword args **\n",
-    "def info(**kwargs):\n",
-    "    for key,value in kwargs.items():\n",
-    "        print(f\"{key} : {value}\")\n",
-    "info(name=\"vijay\",age=12,city=\"Mumbai\")"
+    "# private methods\n",
+    "class emp:\n",
+    "    def __init__(self,name,sal):\n",
+    "        self.name=name\n",
+    "        self.__sal=sal\n",
+    "    def __bonus(self):\n",
+    "        return self.__sal*0.4\n",
+    "    def pack(self):\n",
+    "        return self.__sal +self.__bonus()\n",
+    "e=emp(\"Pradeep\",200000)\n",
+    "print(e.pack())    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "84e670f5-3b27-4a38-9ef8-7c7f68386981",
+   "execution_count": 6,
+   "id": "59ae296b-62aa-4707-869f-b1a39b14c4e7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n",
-      "9\n"
+      "97.0\n",
+      "Name : koushi , GPA: 97.00\n"
      ]
     }
    ],
    "source": [
-    "#lambda function\n",
-    "sq=lambda x: x*x\n",
-    "print(sq(5))\n",
-    "add=lambda x,y,z:x+y+z\n",
-    "print(add(3,5,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "5761dafa-6778-4c8c-a1c6-c01c82fa59ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Min:1,Max:5,Average:3.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "'''write a program to return n numbers of multiple values\n",
-    "Where passing a list of 1 to 5 elements\n",
-    "return the min,max and avg in a single function'''\n",
-    "def allnum(n):\n",
-    "    return min(n),max(n),sum(n)/len(n)\n",
-    "result = allnum([1,2,3,4,5])\n",
-    "min_val,max_val,avg=result\n",
-    "print(f\"Min:{min_val},Max:{max_val},Average:{avg}\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "51bb925b-b9c2-4a69-9db9-7ae7202208f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120\n"
-     ]
-    }
-   ],
-   "source": [
-    "#direct recursion fact\n",
-    "def fact(n):\n",
-    "    if n==0 or n==1:\n",
-    "        return 1\n",
-    "    return n*fact(n-1)    \n",
-    "print(fact(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "787d9b08-b2fd-4880-b1dc-2d1bf2d84b15",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Indirect recursion fact\n",
-    "def e(n):\n",
-    "    if n==0:\n",
-    "        return True\n",
-    "    return o(n-1)\n",
-    "def o(n):\n",
-    "    if n==0:\n",
-    "        return False\n",
-    "    return e(n-1)\n",
-    "print(e(4))\n",
-    "print(o(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06c2699b-5f30-462f-a4d1-a37b76a16480",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Tail Recursion\n",
-    "def fact(n,tail=1):\n",
-    "    if n==0 or n==1:\n",
-    "        return tail\n",
-    "    return fact(n-1,n*tail)\n",
+    "''' calculate the average of 4 subjects of a student by taking protected attributes , pass name and four subjects marks to class student \n",
+    "find gpa and assign the avg to gpa\n",
+    "name = \"*****\"\n",
+    "marks = [99,79,84,95]\n",
+    "output = average of grades =90.0\n",
+    "output = name ***** , gpa=90.00 '''\n",
+    "class student:\n",
+    "    def __init__(self,name,grades):\n",
+    "        self._name=name\n",
+    "        self._grades=grades\n",
     "\n",
-    "print(fact(5))"
+    "    def gpa(self):\n",
+    "        if not self._grades:\n",
+    "            return 0\n",
+    "        return sum(self._grades)/len(self._grades)\n",
+    "        \n",
+    "    def display_info(self):\n",
+    "        print(f\"Name : {self._name} , GPA: {self.gpa():.2f}\")\n",
+    "s=student(\"koushi\",[92,99,98,99])\n",
+    "print(s.gpa())\n",
+    "s.display_info()\n",
+    "\n",
+    "\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "cbea88b7-dae3-4936-ae26-1f7b37e69714",
+   "execution_count": 10,
+   "id": "28b9f6d7-1044-497b-a2f2-5e02fcd77ced",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55\n"
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;124;03m''' Errors and exceptions '''\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;241m5\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
    ],
    "source": [
-    "#linear rec\n",
-    "def total(n):\n",
-    "    if n<=0:\n",
-    "        return 0\n",
-    "    return n+total(n-1)   \n",
-    "print(total(10))"
+    "''' Errors and exceptions '''\n",
+    "5/0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e56b0987-7e48-4225-9389-790e4a13b467",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'var' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m var\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m66\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'var' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "var+66\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0f6f54f8-60f3-4551-a46c-abe0ae45254b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mabc\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m123\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "'abc'+123"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef58df13-a682-4a92-a718-15528a2ed629",
+   "id": "bb7441e3-660b-49a9-bf67-9740ac9badc4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "288\n",
-      "12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#binary recursion\n",
-    "def sfact(n):\n",
-    "    if n<=1:\n",
-    "        return 1\n",
-    "    return fact(n)*sfact(n-1)\n",
-    "def fact(n):\n",
-    "    if n<=1:\n",
-    "        return 1\n",
-    "    return n*fact(n-1)\n",
-    "print(sfact(4)) \n",
-    "print(sfact(3))\n"
+    "'''  built-in exceptions '''\n",
+    "1. Exception\n",
+    "2. StandardError\n",
+    "3. SystemError - sys.exit()\n",
+    "4. OverflowError\n",
+    "5. ArithmeticError\n",
+    "6. IndexError\n",
+    "7. KeyError\n",
+    "8. KeyboardInterrupt\n",
+    "9. StopIterationError\n",
+    "10. EnvironmentalError\n",
+    "11. IOError\n",
+    "12. NotImplementedError\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6b39dda9-dbec-464e-b65d-3f8779e9a2c7",
+   "execution_count": 3,
+   "id": "5c08668a-a183-46a6-9be4-8bb7cc59d6d2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the numerator:  6\n",
+      "Enter the denominator:  0\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65536\n",
-      "27\n"
+      "Denominator cannot be zero\n"
      ]
     }
    ],
    "source": [
-    "def pt(a,n):\n",
-    "    if n==1:\n",
-    "      return a\n",
-    "    return a**pt(a,n-1)\n",
-    "print(pt(2,4))\n",
-    "print(pt(3,2))"
+    "# handle zero exception\n",
+    "num1 = int(input(\"Enter the numerator: \"))\n",
+    "num2 = int(input(\"Enter the denominator: \"))\n",
+    "try:\n",
+    "    quo=num1/num2\n",
+    "    print(\"Quotient:\",quo)\n",
+    "except (ZeroDivisionError):\n",
+    "    print(\"Denominator cannot be zero\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a64c7782-3b77-408a-9c2f-3a360549e6d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: asdffg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter carefully.......\n",
+      "Exit from exception\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiple exception blocks\n",
+    "try:\n",
+    "    num=int(input(\"Enter a number:\"))\n",
+    "    print(num**3)\n",
+    "except (KeyboardInterrupt):\n",
+    "    print(\"Enter only numeric.........program ends!!!\")\n",
+    "except (ValueError):\n",
+    "    print(\"Please enter carefully.......\")\n",
+    "print(\"Exit from exception\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a51975c1-6d39-4c5a-b247-92cb52c06caf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: khigou\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'KeyboardInterupt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m     num\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter a number:\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(num\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m55\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'khigou'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m     num\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter a number:\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(num\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m55\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (KeyboardInterupt, \u001b[38;5;167;01mValueError\u001b[39;00m , \u001b[38;5;167;01mTypeError\u001b[39;00m):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccessing from the blocks above\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnd\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'KeyboardInterupt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    num=int(input(\"Enter a number:\"))\n",
+    "    print(num-55)\n",
+    "except (KeyboardInterupt, ValueError , TypeError):\n",
+    "    print(\"Accessing from the blocks above\")\n",
+    "print(\"End\")    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc878c0a-4492-4f25-8291-32824ed13589",
+   "id": "83bc6aa3-00d9-4270-9187-03730455558d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -259,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
