--- a/kousik.ipynb
+++ b/kousik.ipynb
@@ -3,344 +3,318 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f8ff157c-d4c4-4ef4-abf5-c37a57682e86",
+   "id": "b271ed20-0399-459e-b7cc-cd962a87f0cd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BM\n",
-      "160\n",
-      "200\n",
-      "Car is not moving\n"
+      "[10, 3, 100]\n"
      ]
     }
    ],
    "source": [
-    "# encapsulation\n",
-    "''' basic encapsulation with attributes ,private attributes \n",
-    "1. __var,__x,__a\n",
-    "self.__a'''\n",
-    "class car:\n",
-    "    def __init__(self,brand,speed):\n",
-    "        self.brand=brand\n",
-    "        self.__speed=speed\n",
-    "    def  get_speed(self):\n",
-    "        return self.__speed\n",
-    "    def set_speed(self,speed):\n",
-    "        if speed>=0:\n",
-    "            self.__speed=speed\n",
-    "        else:\n",
-    "            print(\"Car is not moving\")\n",
-    "c = car(\"BM\",160)\n",
-    "print(c.brand)\n",
-    "print(c.get_speed())\n",
-    "c.set_speed(200)\n",
-    "print(c.get_speed())\n",
-    "c.set_speed(-10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "91cf03ce-9aec-4a73-a12c-4615a29b0275",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kousik\n",
-      " Name: kousik, Age: 20\n"
-     ]
-    }
-   ],
-   "source": [
-    "# protected attributes\n",
-    "class student:\n",
-    "    def __init__(self,name,age):\n",
-    "        self._name=name\n",
-    "        self._age=age\n",
-    "    def display_info(self):\n",
-    "        print(f\" Name: {self._name}, Age: {self._age}\")\n",
-    "s=student(\"kousik\",20)\n",
-    "print(s._name)\n",
-    "s.display_info()"
+    "data=[10,'hi',4.5,'students',3,100]\n",
+    "print([x for x in data if(lambda y: type(y)==int)(x)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3eb0b87-43b8-47fd-b006-775e9af4c5e7",
+   "id": "ce01e434-8b73-4674-824c-4c9dc67ffcda",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "280000.0\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "# private methods\n",
-    "class emp:\n",
-    "    def __init__(self,name,sal):\n",
-    "        self.name=name\n",
-    "        self.__sal=sal\n",
-    "    def __bonus(self):\n",
-    "        return self.__sal*0.4\n",
-    "    def pack(self):\n",
-    "        return self.__sal +self.__bonus()\n",
-    "e=emp(\"Pradeep\",200000)\n",
-    "print(e.pack())    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "59ae296b-62aa-4707-869f-b1a39b14c4e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "97.0\n",
-      "Name : koushi , GPA: 97.00\n"
-     ]
-    }
-   ],
-   "source": [
-    "''' calculate the average of 4 subjects of a student by taking protected attributes , pass name and four subjects marks to class student \n",
-    "find gpa and assign the avg to gpa\n",
-    "name = \"*****\"\n",
-    "marks = [99,79,84,95]\n",
-    "output = average of grades =90.0\n",
-    "output = name ***** , gpa=90.00 '''\n",
-    "class student:\n",
-    "    def __init__(self,name,grades):\n",
-    "        self._name=name\n",
-    "        self._grades=grades\n",
-    "\n",
-    "    def gpa(self):\n",
-    "        if not self._grades:\n",
-    "            return 0\n",
-    "        return sum(self._grades)/len(self._grades)\n",
-    "        \n",
-    "    def display_info(self):\n",
-    "        print(f\"Name : {self._name} , GPA: {self.gpa():.2f}\")\n",
-    "s=student(\"koushi\",[92,99,98,99])\n",
-    "print(s.gpa())\n",
-    "s.display_info()\n",
-    "\n",
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "28b9f6d7-1044-497b-a2f2-5e02fcd77ced",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;124;03m''' Errors and exceptions '''\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;241m5\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m0\u001b[39m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
-   "source": [
-    "''' Errors and exceptions '''\n",
-    "5/0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e56b0987-7e48-4225-9389-790e4a13b467",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'var' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m var\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m66\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'var' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "var+66\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0f6f54f8-60f3-4551-a46c-abe0ae45254b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mabc\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m123\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
-     ]
-    }
-   ],
-   "source": [
-    "'abc'+123"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb7441e3-660b-49a9-bf67-9740ac9badc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''  built-in exceptions '''\n",
-    "1. Exception\n",
-    "2. StandardError\n",
-    "3. SystemError - sys.exit()\n",
-    "4. OverflowError\n",
-    "5. ArithmeticError\n",
-    "6. IndexError\n",
-    "7. KeyError\n",
-    "8. KeyboardInterrupt\n",
-    "9. StopIterationError\n",
-    "10. EnvironmentalError\n",
-    "11. IOError\n",
-    "12. NotImplementedError\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5c08668a-a183-46a6-9be4-8bb7cc59d6d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the numerator:  6\n",
-      "Enter the denominator:  0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Denominator cannot be zero\n"
-     ]
-    }
-   ],
-   "source": [
-    "# handle zero exception\n",
-    "num1 = int(input(\"Enter the numerator: \"))\n",
-    "num2 = int(input(\"Enter the denominator: \"))\n",
-    "try:\n",
-    "    quo=num1/num2\n",
-    "    print(\"Quotient:\",quo)\n",
-    "except (ZeroDivisionError):\n",
-    "    print(\"Denominator cannot be zero\")"
+    "''' pvar=lambda v1,v2.......:operation/condition/boolean'''\n",
+    "add = lambda x,y:x+y\n",
+    "print(add(2,3))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a64c7782-3b77-408a-9c2f-3a360549e6d1",
+   "id": "1f315610-e575-4938-a892-ecf9f878b32d",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a number: asdffg\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter carefully.......\n",
-      "Exit from exception\n"
+      "24\n"
      ]
     }
    ],
    "source": [
-    "# multiple exception blocks\n",
-    "try:\n",
-    "    num=int(input(\"Enter a number:\"))\n",
-    "    print(num**3)\n",
-    "except (KeyboardInterrupt):\n",
-    "    print(\"Enter only numeric.........program ends!!!\")\n",
-    "except (ValueError):\n",
-    "    print(\"Please enter carefully.......\")\n",
-    "print(\"Exit from exception\")    "
+    "'''calculate the factorial of n using recursion of lambda function when n=4'''\n",
+    "factorial = lambda f: lambda n: 1 if n == 0 else n * f(f)(n - 1)\n",
+    "result = factorial(factorial)(4)\n",
+    "print(result)  # Output: 24\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "578298e1-987a-4cac-bdb1-ee5d9a10596b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact=(lambda f: lambda n:1 if n==0 else\n",
+    "      n*f(f)(n-1))(lambda f :lambda n:1\n",
+    "                   if n==0 else n*f(f)(n-1))\n",
+    "print(fact(6))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a51975c1-6d39-4c5a-b247-92cb52c06caf",
+   "id": "afa5b1d9-be78-4bd3-b13b-2b45c48dc627",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number: khigou\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'KeyboardInterupt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m     num\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter a number:\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(num\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m55\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'khigou'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m     num\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter a number:\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(num\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m55\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (KeyboardInterupt, \u001b[38;5;167;01mValueError\u001b[39;00m , \u001b[38;5;167;01mTypeError\u001b[39;00m):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccessing from the blocks above\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnd\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'KeyboardInterupt' is not defined"
+      "15\n"
      ]
     }
    ],
    "source": [
-    "try:\n",
-    "    num=int(input(\"Enter a number:\"))\n",
-    "    print(num-55)\n",
-    "except (KeyboardInterupt, ValueError , TypeError):\n",
-    "    print(\"Accessing from the blocks above\")\n",
-    "print(\"End\")    "
+    "n=3246\n",
+    "sd=lambda n:0 if n==0 else n%10+ sd(n//10)\n",
+    "print(sd(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "78c85526-24d9-4948-9101-a3c3ed967ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "dsum=(lambda f: lambda n:0 if n==0 else n%10+f(f)(n//10))(lambda f: lambda n:0 if n==0 else n%10 + f(f)(n//10))\n",
+    "print(dsum(1234))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e9de84b5-e762-454b-a31a-8e060eb3e231",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "big=lambda x,y: x if x>y else y\n",
+    "print(big(5,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "75376e3b-85f3-4731-a245-a4151774f9b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 44, 66]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums=[11,22,33,44,55,66,77,99]\n",
+    "e=list(filter(lambda num:num%2 ==0 ,nums))\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "168edf66-c281-4f4d-a9d7-51cc3cb41691",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 11), (66, 66), (11, 99)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "packs=[(11,99),(2,11),(66,66)]\n",
+    "result=sorted(packs,key=lambda x:x[1])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "29238507-38f6-42e0-9246-9242a681e84c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def b(n):\n",
+    "    return lambda x:x*n\n",
+    "a=b(2)\n",
+    "print(a(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "53e670cf-4f50-4a6a-af95-1accb539d7a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "def a(n):\n",
+    "    return n**3\n",
+    "b=lambda x: x**3\n",
+    "print(a(2))\n",
+    "print(b(3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f29f7710-a03f-4985-9cd9-c13c481f12f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yeluchuri\n",
+      "1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' code to declare the longest string using lambda '''\n",
+    "long = lambda a,b: a if len(a)> len(b) else b\n",
+    "print(long('kousik','yeluchuri'))\n",
+    "print(long('1234','11'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "34f3154a-bb55-48d5-8d6c-7368437c0ded",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PEN', 'CAP', 'BAT']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LC with lambda \n",
+    "data=['pen','cap','bat']\n",
+    "f=[(lambda x: x.upper())(d) for d in data]\n",
+    "print(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "128b59e9-e536-4b7b-82df-04146630f9d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kisuok\n"
+     ]
+    }
+   ],
+   "source": [
+    "str='kousik'\n",
+    "g=lambda x: x[::-1]\n",
+    "print(g(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "893ff7a2-5bf1-4373-ba88-ea11c6045070",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['iruhculey', 'ias', 'liblik']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words=['yeluchuri','sai','kilbil']\n",
+    "rw=[(lambda w:w[::-1])(word) for word in words]\n",
+    "print(rw)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83bc6aa3-00d9-4270-9187-03730455558d",
+   "id": "862d2a6c-5a61-40e9-872c-7a1d4cf375cb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
